# ChangeLog for perl-core/Time-Piece
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-Piece/ChangeLog,v 1.2 2008/12/14 16:14:12 aballier Exp $

  14 Dec 2008; Alexis Ballier <aballier@gentoo.org> Time-Piece-1.13.ebuild:
  keyword ~sparc-fbsd

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Time-Piece-1.11.ebuild, +Time-Piece-1.13.ebuild:
  dev-perl => perl-core migration

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Time-Piece-1.08.ebuild,
  -Time-Piece-1.10.ebuild, Time-Piece-1.13.ebuild:
  Cleanup

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> Time-Piece-1.13.ebuild:
  alpha/ia64/sparc/x86 stable

*Time-Piece-1.13 (28 Apr 2008)

  28 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Time-Piece-1.13.ebuild:
  Version bump

  08 Dec 2007; Raúl Porcel <armin76@gentoo.org> Time-Piece-1.11.ebuild:
  alpha stable

  04 Dec 2007; Markus Rothe <corsair@gentoo.org> Time-Piece-1.11.ebuild:
  Stable on ppc64; bug #198075

  04 Dec 2007; nixnut <nixnut@gentoo.org> Time-Piece-1.11.ebuild:
  Stable on ppc wrt bug 198075

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Fixing Changelog

  30 Jun 2007; Raúl Porcel <armin76@gentoo.org> Time-Piece-1.11.ebuild:
  Add ~alpha wrt #165190

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Time-Piece-1.11.ebuild:
  Stable on x86, bug #169152.

  14 Feb 2007; Markus Rothe <corsair@gentoo.org> Time-Piece-1.11.ebuild:
  Added ~ppc64

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> Time-Piece-1.11.ebuild:
  Stable on IA64.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Time-Piece-1.08.ebuild, -Time-Piece-1.09.ebuild, Time-Piece-1.10.ebuild,
  Time-Piece-1.11.ebuild:
  Ebuild maintenance

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Time-Piece-1.11.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  Time-Piece-1.11.ebuild:
  amd64 stable
