@@ -1,4 +1,6 @@
 DIST Time-Piece-1.13.tar.gz 20798 RMD160 bf28ddb80098e46882896c50ecd2ef9dbc513ca9 SHA1 2d08f7408de29cff0e984635ee0c76e30b34e60f SHA256 0bb3a4b4eb91538e0cc21474ef4f876a4b43ed237757ec619afea4d3c42e5013
+DIST Time-Piece-1.14.tar.gz 23038 RMD160 07b19e2380f761eba7fa6b92249fe8223e09f574 SHA1 bc520410b902724dfb15856d6364c77b65173ac1 SHA256 009086e6661862f7f15b167289fd98c0261d2179e8d4e5ffa020e0f8291a0ea5
 EBUILD Time-Piece-1.13.ebuild 427 RMD160 d853816bd6a84ebb8cacb76af59b0dbca3626c8e SHA1 cd6cd5ad68533e96c2225b66641683ee6522654a SHA256 ef30852d5c17a0fa8df5693b8382b76359643181f3dc24bb1925935d3436313c
-MISC ChangeLog 3587 RMD160 39ac236119356ec3a7662996fff880048eae06fb SHA1 2ddad17c41adcc2a91c5a0b095e80fdef05b0a02 SHA256 abfce27ed6564039b37d8e87afb10cc732b14b84707de7a4e7a83a1436f682de
+EBUILD Time-Piece-1.14.ebuild 388 RMD160 7d7f611ba91804a209e4b1d844a8776bf8202a1b SHA1 c834b8354e66e8d019528cc84365a98546e840f8 SHA256 315a2cd6009681144f16ef79a4325a1d1deca700c3f0c446c906ddae2a675246
+MISC ChangeLog 3704 RMD160 bd3157d156cc5bc471aa15821aa9c0bdde5237b4 SHA1 dc0fc288c8ce721dd1cf615faee441a672b5f929 SHA256 d4c7d8849f9345275e5fd5d12bedd53e2985d9e2961f8c3062644dc64b39b6a5
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
