@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-Piece/Time-Piece-1.14.ebuild,v 1.1 2009/05/11 10:42:14 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=MSERGEANT
+inherit perl-module
+
+DESCRIPTION="Object Oriented time objects"
+
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux"
+IUSE=""
+
+SRC_TEST="do"
