@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Time-Piece
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-Piece/ChangeLog,v 1.2 2008/12/14 16:14:12 aballier Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Time-Piece/ChangeLog,v 1.3 2009/05/11 10:42:14 tove Exp $
+
+*Time-Piece-1.14 (11 May 2009)
+
+  11 May 2009; Torsten Veller <tove@gentoo.org> +Time-Piece-1.14.ebuild:
+  Version bump
 
   14 Dec 2008; Alexis Ballier <aballier@gentoo.org> Time-Piece-1.13.ebuild:
   keyword ~sparc-fbsd
